--- a/Project/app/src/main/res/layout/cards_layout.xml
+++ b/Project/app/src/main/res/layout/cards_layout.xml
@@ -5,11 +5,10 @@
     android:orientation="vertical"
     android:tag="cards main container">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView android:layout_height="match_parent"
+        android:layout_width="match_parent"
         android:id="@+id/dice_card"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         card_view:cardBackgroundColor="@color/color_white"
         card_view:cardCornerRadius="10dp"
         card_view:cardElevation="5dp"
@@ -29,11 +28,11 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:src="@drawable/ic_launcher"/>
+                android:src="@drawable/blank_dice"/>
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
 
