--- a/Project/app/src/main/res/layout/fragment_numerical.xml
+++ b/Project/app/src/main/res/layout/fragment_numerical.xml
@@ -46,7 +46,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/up_stepper_desc"
-                android:src="@drawable/ic_add_black" />
+                android:src="@drawable/ic_add_black"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/num_dice_text_view"
