--- a/Project/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Project/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,6 +20,6 @@
     <fragment
         android:id="@+id/navigation_settings"
         android:name="com.dylanhouston.rollthedice.ui.settings.SettingsFragment"
-        android:label="@string/title_numerical"
+        android:label="@string/title_settings"
         tools:layout="@layout/fragment_settings" />
 </navigation>
