--- a/Project/app/src/main/res/layout/fragment_numerical.xml
+++ b/Project/app/src/main/res/layout/fragment_numerical.xml
@@ -73,7 +73,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_weight="0"
             app:adSize="BANNER"
-            app:adUnitId="ca-app-pub-3940256099942544/6300978111" />
+            app:adUnitId="@string/ad_id" />
 
 
     </LinearLayout>
